fix(ticket): add delay before exporting ticket style(ticketgenerator.module.scss): add fallback font families The delay before exporting the ticket is added to ensure that the QR code is fully rendered before exporting. This prevents the QR code from being cut off in the exported ticket. The fallback font families are added to ensure that the ticket generator page is still readable even if the primary font 'Open Sans' fails to load.

--- a/styles/pages/ticketgenerator.module.scss
+++ b/styles/pages/ticketgenerator.module.scss
@@ -116,7 +116,8 @@
                         p {
                             text-align: center;
                             padding-top: 10px;
-                            font-family: 'Open Sans';
+                            font-family: 'Open Sans', Roboto, SBRoobert,
+                                Helvetica, sans-serif;
                             font-size: 16px;
                             font-weight: 700;
                             color: var(--primary);
